feat: Update default color palette to forest
Changes the default `COLOR_PALETTE` environment variable from `default` to `forest` to apply a new theme to the application.

--- a/backend/.env.example.txt
+++ b/backend/.env.example.txt
@@ -30,7 +30,7 @@ COOKIE_SECRET=un_secret_pour_signer_les_cookies
 COMPANY_ADDRESS="Votre Entreprise\n123 Rue Principale\n75001 Paris, France"
 APP_LOGO_DATA_URL=""
 APP_FAVICON_DATA_URL=""
-COLOR_PALETTE=default
+COLOR_PALETTE=forest
 APP_NAME="EVSCallPro"
 DEFAULT_LANGUAGE=en
 FONT_FAMILY="Inter"
